# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "allocator"
version = "0.0.2"
license-file = "LICENSE.txt"
edition = "2021"
authors = ["The Maintainers of Nanvix"]
description = "Memory Allocator for no_std Systems"
homepage = "https://github.com/nanvix"

[lib]
crate-type = ["lib"]

[dependencies]
error = { git = "https://github.com/nanvix/error", branch = "releases/v0.0.3" }
slab = { git = "https://github.com/nanvix/slab", branch = "releases/v0.0.3" }

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = "fat"
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
